edit commission calculate
